got the reproduction breaking/working
it appears that HMR works... but doesn't actually apply. however, if you force a state update, then the update gets applied.

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
         "imports": {
           "react": "https://cdn.jsdelivr.net/npm/@esm-bundle/react@17.0.1/system/react.development.js",
           "react-dom": "https://cdn.jsdelivr.net/npm/@esm-bundle/react-dom@17.0.1/system/react-dom.development.js",
-          "app": "http://localhost:8081/main.js"
+          "app": "http://localhost:8081/main.js",
+          "app2": "http://localhost:8082/main.js"
         }
       }
     </script>
     <script
-      src="https://cdn.jsdelivr.net/npm/systemjs@6.6.1/dist/s.js"
+      src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.js"
       crossorigin="anonymous"
     ></script>
     <script>
